static/main.css
/* RESET */
body {
    margin: 0;
    font-family: -apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    color: #333;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.h1-lg {
    font-size: clamp(2rem, 10vw, 4rem);
    font-weight: 400;
    line-height: 1.15;
    margin: 0;
}

.h2-lg {
    font-size: clamp(2rem, 8vw, 3rem);
    font-weight: 400;
    line-height: 1.15;
    margin: 0;
    text-align:center;
}

a, a:hover {
    text-decoration: underline;
    color: #FFF;
}

.no-decoration, .no-decoration:hover, .no-decoration:focus {
    text-decoration: none;
}

.dark-link, .dark-link:hover, .dark-link:focus {
    text-decoration: underline;
    color: #000;
}

.text-grey {
    color: #fcda02;
}

.bg-grey {
    background-color: #eee;
}

.center-text {
    text-align: center;
}

.move-away * {
    float: left;
}

.move-away *:nth-child(even) {
    float: right;
}

.m0 {
    margin: 0;
}

/* SECTIONS FOR CONTENT */

section {
    line-height: 1.55;
    color: #000;
    font-weight: 400;
    font-size: 17px;
    padding: 50px 0;
}

/* SPLASH FOREGROUND OF ANIMATION */

.splash {
    background: linear-gradient(-45deg, #107FC9, #0A4F7D, #1277BA, #0170BA);
    animation: gradientBG 20s ease infinite;
    background-size: 400% 400%;
    color: rgba(255, 255, 255, .9);
}

.splash div {
    box-sizing: border-box;
    padding: 10px 0;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    background: url('repeat-bg.svg');
}

.splash p {
    line-height: 1.55;
    font-size: clamp(1rem, 2.5vw, 2rem);
    width: 50%;
    margin-bottom: 0;
    text-align: center;
    padding-bottom: 50px;
}

.splash img {
    padding-top: 50px;
    padding-bottom: 30px;
}


@keyframes gradientBG {
  0% {
    background-position: 0% 0%
  }

  50% {
    background-position: 100% 100%
  }

  100% {
    background-position: 0% 0%
  }
}



/* NAV */

nav {
    background-color: #00264d;
    position: sticky;
    top:0;
    height: 70px;
}

nav ul {
    display: flex;
    justify-content: space-around;
    height: 100%;
}

nav li {
    display: block;
    height: 100%;
}

nav a {
    line-height: 70px;
    text-align: center;
    color: #FFF;
    text-decoration: none;
    font-size: 17px;
    padding: 0px 20px;
    display: inline-block;
}

nav img {
    margin-right: 4px;
}

nav a:hover {
    background-color: #107FC9;
    color: #FFF;
}

/* LARGE CALL-OUT-BOX */

.call-out {
    background: #0d69a6;
    font-size: 1.5rem;
    padding: 1em;
    color: #fff;
    border-radius: 5px;
}

/* FOOTER */

footer {
    background-color: #00264d;
    color: #fff;
    padding: 1em;
    height: 100%;
    margin-top: 2em;
}

.footer-table {
    display: grid;
    grid-template-columns: auto;
}

.footer-header {
    font-size: 1.5rem;
    font-weight: 100;
}

.footer-end {
    padding: 1em;
    display: flex;
    justify-content: space-between;
    margin-top: 1em !important; /* important needed as long as the target element got the container class */
}

.white-bg {
    background-color:#FFF;
}

/* TABLE */

table {
    border-collapse: collapse;
    width: 100%;
    text-align: left;
}

table a {
    color: #000;
    text-decoration: none;
}

table a:focus, table a:hover {
    color: #000;
    text-decoration: underline;
}

table td, table th {
    padding: 8px;
}

table th {
    font-size: 1.2rem;
    font-weight: 100;
}

table tr:nth-child(even) {
    background-color: #f2f2f2;
}

table ul li {
    display: inline;
    margin-right: 3px;
}

/* BUTTONS */

.btn {
    background: #00264d;
    color: #fff;
    text-decoration: none;
    padding: 7px 21px;
    line-height: 18px;
    border-radius: 3px;
}

.btn:hover, .btn:focus {
    background: #107FC9;
    text-decoration: none;
}

.btn.rounded {
    border-radius: 20px;
}


/* LAYOUT */

.container {
    width: 100%;
    padding: 0 1em;
    box-sizing: border-box;
}

.grid {
    display: grid;
    grid-gap: 1em;
    grid-template-columns: auto;
}

.box-list {
    display: grid;
    grid-gap: 1em;
    grid-template-columns: auto;
    margin: 1em 0;
}

.box-list li {
    height: 100px;
    line-height: 100px;
    background: #107fc9;
    border-radius: 3px;
}

.box-list a {
    display: block;
    text-align: center;
    text-decoration: none;
    color: #fff;
    font-size: 115%;
}

.topic-list {
    display: grid;
    grid-gap: 1em;
    grid-template-columns: 1fr 1fr;
    margin: 1em 0;
    text-align: center;
}

.topic-list div {
    background: #107fc9;
    border-radius: 100%;
    height: 100px;
    text-align: center;
    width: 100px;
    margin: auto;
    margin-bottom: 1em;
}

.topic-list img {
    height: 50px;
    margin-top: 25px;
}

.topic-list a {
    color: #000;
}

/* HEADER */

header.item {
    background: #0d69a6;
    margin-top: 2em;
    padding: 2em;
    color: #fff;
    border-radius: 5px 5px 0px 0px;
}

.header-lower {
    display: grid;
    grid-gap: 1em;
    grid-template-columns: auto;
}

.action-boxes {
    display: grid;
    grid-gap: 1em;
    grid-template-columns: auto;
}

.infobox {
    background: #00264d;
    border-radius: 5px;
    padding: 2em;
}

.btn-list .btn {
    margin-right: .5em;
}

/* SPINNER */

.spinner {
    margin: auto;
    width: 70px;
    text-align: center;
}

.spinner > div {
    width: 18px;
    height: 18px;
    background-color: #333;
    border-radius: 100%;
    display: inline-block;
    animation: dots 1.4s infinite ease-in-out both;
}

.spinner .dot1 { animation-delay: -0.32s; }
.spinner .dot2 { animation-delay: -0.16s; }

@keyframes dots {
  0%, 80%, 100% { transform: scale(0); }
  40% { transform: scale(1.0); }
}

/* #TODO review break points */

.hide-mobile {
    display: none;
}

@media screen and (min-width: 600px) {
    .container {
        width: 600px;
        margin: auto;
    }

    .box-list {
        grid-template-columns: auto auto;
    }

    .topic-list {
        grid-template-columns: 1fr 1fr 1fr;
    }

    .hide-mobile {
        display: initial;
    }

    .action-boxes {
        grid-template-columns: auto auto;
    }
}

@media screen and (min-width: 800px) {
    .container {
        width: 800px;
        margin: auto;
    }

    .box-list {
        grid-template-columns: auto auto auto;
    }

    .topic-list {
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    }

    .footer-table {
        grid-template-columns: auto auto auto;
    }

    .action-boxes {
        grid-template-columns: auto;
    }

    .header-lower {
        grid-template-columns: auto auto;
    }

    .hide-mobile {
        display: initial;
    }
}


/* A11Y */

@media (prefers-reduced-motion) {
    * {
        animation: none;
    }
}

